--- a/OJ.html
+++ b/OJ.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <html lang="zh"><head><meta charset="utf-8">
-  <title>电视猪OJ</title>
+  <title>Power OI</title>
   <style>
     html { background: #fff; margin: 0 1em; }
     body { font: .8125em/1.5 arial, sans-serif; text-align: center; }
@@ -16,11 +16,11 @@
     img { border: 0; }
   </style>
   </head><body><div>
-    <a href="http://1.117.142.235/">
+    <a href="http://poweroi.me:9898/">
       <img src="/jumper.png"  alt="Google"  width="586" height="257">
     </a>
-    <h1><a href="http://1.117.142.235/"><strong id="target">http://1.117.142.235/</strong></a></h1>
+    <h1><a href="http://poweroi.me:9898/"><strong id="target">http://poweroi.me:9898/</strong></a></h1>
     <p>请收藏我们的网址
   </p></div>
   <p id="footer">
-    ©2020 - 2021 Hello8693</p></body></html>
+    ©2021 OneJudge.</p></body></html>
