--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     img { border: 0; }
   </style>
   </head><body><div>
-    <a href="http://poweroi.me:9898/">
+    <a href="http://oj.poweroi.me:9898/">
       <img src="/jumper.png"  alt="Google"  width="586" height="257">
     </a>
-    <h1><a href="http://poweroi.me:9898/"><strong id="target">http://poweroi.me:9898/</strong></a></h1>
+    <h1><a href="http://oj.poweroi.me:9898/"><strong id="target">http://oj.poweroi.me:9898/</strong></a></h1>
     <p>请收藏我们的网址
   </p></div>
   <p id="footer">
